--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "amazon-connect-chatjs": "^2.0.0",
     "amazon-connect-streams": "^2.5.1",
     "aws-amplify": "^4.0.3",
+    "deepl-node": "^1.10.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hooks-global-state": "^1.0.1",
     "react-scripts": "4.0.3",
     "semantic-ui-react": "^2.0.3",
-    "web-vitals": "^2.0.1",
-	"deepl-node": "^1.10.2"
+    "web-vitals": "^2.0.1"
   },
   "scripts": {
     "start": "craco start",
