--- a/amplify/backend/function/amazonTranslateLambda/src/package.json
+++ b/amplify/backend/function/amazonTranslateLambda/src/package.json
@@ -5,6 +5,6 @@
   "main": "index.js",
   "license": "Apache-2.0",
   "dependencies": {
-    "deepl-node": "^1.10.2"
+    "deepl-node": "1.8.0"
   }
 }
