--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "amazon-connect-chatjs": "^2.0.0",
     "amazon-connect-streams": "^2.5.1",
     "aws-amplify": "^4.0.3",
-    "deepl-node": "^1.8.0",
+    "deepl-node": "1.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hooks-global-state": "^1.0.1",
