--- a/package.json
+++ b/package.json
@@ -3,19 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@aws-amplify/ui-react": "^1.2.1",
+    "@aws-amplify/cli": "^12.2.0",
+    "@aws-amplify/ui-react": "^5.0.5",
     "@testing-library/jest-dom": "^5.13.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^13.1.9",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "amazon-connect-chatjs": "^2.0.0",
     "amazon-connect-streams": "^2.5.1",
-    "aws-amplify": "^4.0.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-hooks-global-state": "^1.0.2",
-    "react-scripts": "4.0.3",
+    "aws-amplify": "^5.3.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hooks-global-state": "^2.1.0",
+    "react-scripts": "5.0.1",
     "semantic-ui-react": "^2.0.3",
-    "web-vitals": "^2.0.1"
+    "web-vitals": "^3.4.0"
   },
   "scripts": {
     "start": "craco start",
@@ -41,8 +42,8 @@
     ]
   },
   "devDependencies": {
-    "@craco/craco": "^6.4.5",
-    "@semantic-ui-react/craco-less": "^1.2.6",
+    "@craco/craco": "^7.1.0",
+    "@semantic-ui-react/craco-less": "^3.0.0",
     "semantic-ui-less": "^2.5.0"
   }
 }
