--- a/amplify/backend/function/amazonTranslateLambda/src/package.json
+++ b/amplify/backend/function/amazonTranslateLambda/src/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "license": "Apache-2.0",
   "dependencies": {
-    "deepl-node": "1.8.0"
+    "amplify": "^0.0.11",
+    "deepl-node": "1.10.2"
   }
 }
