--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^14.4.3",
     "amazon-connect-chatjs": "^2.0.0",
     "amazon-connect-streams": "^2.5.1",
+    "amplify": "^0.0.11",
     "aws-amplify": "^5.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
