--- a/package.json
+++ b/package.json
@@ -3,15 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@aws-amplify/cli": "^12.2.0",
-    "@aws-amplify/ui-react": "^5.0.5",
+    "@aws-amplify/auth": "^5.5.5",
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
     "amazon-connect-chatjs": "^2.0.0",
     "amazon-connect-streams": "^2.5.1",
-    "amplify": "^0.0.11",
     "aws-amplify": "^5.3.5",
+    "eslint-config-react-app": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hooks-global-state": "^2.1.0",
